// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test <GifApp /> should mount <GifApp /> 1`] = `
<Fragment>
  <h2>
    GifApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Haikyuu"
      key="Haikyuu"
    />
  </ol>
</Fragment>
`;

exports[`test <GifApp /> should show a list of categories 1`] = `
<Fragment>
  <h2>
    GifApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
    <GifGrid
      category="Haikyuu"
      key="Haikyuu"
    />
  </ol>
</Fragment>
`;
